--- a/rdb_server/tsconfig.json
+++ b/rdb_server/tsconfig.json
@@ -5,10 +5,12 @@
     "strict": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
-    "types": ["node"],
+    "types": [
+      "node"
+    ],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    "outDir": "dist"
+    "outDir": "./dist"
   },
   "exclude": ["node_modules"]
 }
