--- a/rdb_server/Dockerfile
+++ b/rdb_server/Dockerfile
@@ -1,20 +1,7 @@
-# Use Node.js base image
-FROM node:18-alpine
-
-# Set the working directory inside the container
+FROM node:18-alpine AS build
 WORKDIR /app
-
-# Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
-
-# Install dependencies
 RUN npm install
-
-# Copy the rest of the application code to the container
 COPY . .
-
-# Expose the backend port
-EXPOSE 4000
-
-# Start the backend server
-CMD ["npm", "run", "dev"]
+EXPOSE 5000
+CMD ["npm", "run", "start"]
