--- a/rdb_server/package.json
+++ b/rdb_server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@hono/node-server": "^1.14.1",
     "@prisma/client": "^6.7.0",
+    "dotenv": "^16.5.0",
     "hono": "^4.7.8"
   },
   "devDependencies": {
