--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,9 +2,7 @@
   "name": "rdb_server",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "tsc"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.1",
