refactor(Dockerfile {backend}: implemented the prisma code for docker file

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,7 +2,9 @@
   "name": "rdb_server",
   "type": "module",
   "scripts": {
-    "build": "tsc"
+    "prisma:generate": "prisma generate",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.1",
