--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "rdb_server",
-  "type": "module",
+  "name": "todo-backend",
+  "version": "1.0.0",
+  "description": "Backend for Todo App",
+  "main": "server.js",
   "scripts": {
-    "prisma:generate": "prisma generate",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "test": "jest --ci --reporters=default --reporters=jest-junit"
   },
   "dependencies": {
-    "@hono/node-server": "^1.14.1",
-    "@prisma/client": "^6.7.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "hono": "^4.7.8"
+    "express": "^5.1.0",
+    "path-to-regexp": "^8.2.0",
+    "pg": "^8.16.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "prisma": "^6.7.0",
-    "tsx": "^4.7.1",
-    "typescript": "^5.8.3"
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0"
   }
 }
