fix(server.js): Deployment code for .env.prodiction for render

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,5 @@
 # Use a compatible Node.js version for Next.js
-FROM node:18-alpine
-
+FROM --platform=linux/amd64 node:18-alpine
 # Set the working directory
 WORKDIR /app
 
@@ -9,5 +8,3 @@ COPY package*.json ./
 
 # Install dependencies
 RUN npm install 
-
-# Pass environment
