feat(report): Updated the readme.md file for assignment 1

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,8 @@
-# Use a compatible Node.js version for Next.js
 FROM --platform=linux/amd64 node:18-alpine
-# Set the working directory
 WORKDIR /app
-
-# Copy package.json and package-lock.json
 COPY package*.json ./
-
-# Install dependencies
-RUN npm install 
+RUN npm install
+COPY . .
+RUN npm run build
+EXPOSE 3000
+CMD ["npm", "start"]
